infra/k8s/base/predict/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartmeal-predict
  labels:
    app.kubernetes.io/name: smartmeal-predict
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: smartmeal-predict
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smartmeal-predict
    spec:
      containers:
        - name: smartmeal-predict
          image: ghcr.io/tuanvyst/smartmeal/smartmeal-predict:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            capabilities:
              drop:
                - ALL
      securityContext:
        seccompProfile:
          type: RuntimeDefault
