infra/k8s/base/predict/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartmeal-predict
  labels:
    app.kubernetes.io/name: smartmeal-predict
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: smartmeal-predict
  ports:
    - name: http
      port: 8000
      targetPort: http
